# flashy

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yaml  tests.yaml
flashy/: __init__.py  distrib.py  formatter.py  logging.py  solver.py  state.py  utils.py
tests/: test_distrib.py
